--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.CalculatorByArka" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Base.Theme.CalculatorByChintu" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">#FF9800</item>
         <item name="colorPrimaryVariant">#FFC107</item>
         <item name="colorOnPrimary">@color/black</item>
@@ -13,5 +13,5 @@
 
     </style>
 
-    <style name="Theme.CalculatorByArka" parent="Base.Theme.CalculatorByArka" />
+    <style name="Theme.CalculatorByChintu" parent="Base.Theme.CalculatorByChintu" />
 </resources>
